--- a/pages-eng/index.html
+++ b/pages-eng/index.html
@@ -32,7 +32,7 @@
     <ul class="menu-container">
       <li><a class="about-link" href="./pages eng/about/">About me</a></li>
       <li><a href="./pages eng/contact/"><button class="px-3 py-1">Contact me</button></a></li>
-      <li><a href="./"><button class="px-3 py-1">ITA</button></a></li>
+      <li><a href="../"><button class="px-3 py-1">ITA</button></a></li>
     </ul>
   </nav>
 
@@ -98,7 +98,7 @@
     <div class="footer">
       <P class="footer-info">ⓒ 2024 Portfolio of Daniele Lessio <br> Special thanks to myself and ChatGPT <br> I authorize the processing of personal data contained in my resume under Reg. 2016/679/EU.</P>
       <ul class="menu-container">
-        <li><a href="../assets/img/CV-Daniele-Lessio.pdf" download>Resumé download ↓</a></li>
+        <li><a href="../assets/img/Daniele-Lessio-Resume.pdf" download>Resumé download ↓</a></li>
       </ul>
     </div>
   </FOOTER>
