--- a/pages-eng/about-eng/index.html
+++ b/pages-eng/about-eng/index.html
@@ -26,8 +26,9 @@
     <nav class="nav-container ">
         <a href="https://lessiodaniele.github.io/personal-portfolio/"><img class="logo" src="../../assets/img/personal-logo.png" alt="Logo personale"></a>
         <ul class="menu-container">
-            <li><a class="about-link" href="../../pages/about/">About me</a></li>
-            <li><a href="../../pages/contact/"><button class="px-3 py-1">Contact me</button></a></li>
+            <li><a class="about-link" href="../about-eng/">About me</a></li>
+            <li><a href="../contact-eng/"><button class="px-3 py-1">Contact me</button></a></li>
+            <li><a href="../../pages/about/"><button class="px-3 py-1">ITA</button></a></li>
         </ul>
     </nav>
 
