--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -26,8 +26,9 @@
     <nav class="nav-container ">
         <a href="https://lessiodaniele.github.io/personal-portfolio/"><img class="logo" src="../../assets/img/personal-logo.png" alt="Logo personale"></a>
         <ul class="menu-container">
-            <li><a class="about-link" href="../../pages/about/">Su di me</a></li>
-            <li><a href="../../pages/contact/"><button class="px-3 py-1">Contattami</button></a></li>
+            <li><a class="about-link" href="../about/">Su di me</a></li>
+            <li><a href="../contact/"><button class="px-3 py-1">Contattami</button></a></li>
+            <li><a href="../../pages-eng/about-eng/"><button class="px-3 py-1">ENG</button></a></li>
         </ul>
     </nav>
 
