--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script defer src="./assets/js/scripts.js" async></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>  
-    
+    <!---->
 </head>
 <body>
   <nav class="nav-container ">
@@ -32,7 +32,7 @@
     <ul class="menu-container">
       <li><a class="about-link" href="./pages/about/">Su di me</a></li>
       <li><a href="./pages/contact/"><button class="px-3 py-1">Contattami</button></a></li>
-      <li><a href="./pages-eng/"><button class="px-3 py-1">ENG</button></a></li>
+      <li><a href="./pages-eng/"><img class=" eng-switch" src="assets/img/united-kingdom.png"></img></a></li>
     </ul>
   </nav>
 
