--- a/pages-eng/index.html
+++ b/pages-eng/index.html
@@ -32,7 +32,7 @@
     <ul class="menu-container">
       <li><a class="about-link" href="./about-eng/">About me</a></li>
       <li><a href="./contact-eng/"><button class="px-3 py-1">Contact me</button></a></li>
-      <li><a href="../"><button class="px-3 py-1">ITA</button></a></li>
+      <li><a href="../"><img class="ita-switch" src="../assets/img/italian.png"></img></a></li>
     </ul>
   </nav>
 
